--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -503,12 +503,6 @@
   color: var(--md-primary-fg-color--light);
 }
 
-/* Paths */
-.md-path__link {
-  color: var(--md-default-fg-color--light);
-}
-
-
 /* Buttons */
 .md-button {
   background-color: var(--md-primary-fg-color);
@@ -1018,3 +1012,13 @@
   background-color: transparent;
   border-radius: 0 0 0.2rem 0.2rem;
 }
+
+/* Paths */
+.md-path__item:not(:first-child)::before {
+  background-color: var(--md-default-fg-color);
+}
+
+.md-path__link {
+  color: var(--md-default-fg-color);
+}
+
